# counter-pose-mcp

./: .gitignore  CLAUDE.md  INSTALLATION.md  README.md  prd.md  pyproject.toml  requirements.txt  run_server.sh  setup.py  setup.sh  test_client.sh
data/: counter-pose-log.rtf  twitter-growth-framework.md
src/mcp_server/: cli.py  counter_pose_tool.py  main.py
tests/: comprehensive_reasoning_tests.py  test_counter_pose_tool.py  test_domain_detection.py  test_error_handling.py  test_persona_selection.py  test_reasoning_validator.py  test_session_flow.py
